Cake Extractor: DASynchAdrollAds: Add FB fields AdRoll Entity: add FB fields Migration for new TDad fields

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -264,6 +264,10 @@
     <Compile Include="MigrationsTD\201604271705417_Mig_TDad_Url.Designer.cs">
       <DependentUpon>201604271705417_Mig_TDad_Url.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201605262050589_Mig_BodyHeadlineMessage.cs" />
+    <Compile Include="MigrationsTD\201605262050589_Mig_BodyHeadlineMessage.Designer.cs">
+      <DependentUpon>201605262050589_Mig_BodyHeadlineMessage.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -439,6 +443,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201604271705417_Mig_TDad_Url.resx">
       <DependentUpon>201604271705417_Mig_TDad_Url.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201605262050589_Mig_BodyHeadlineMessage.resx">
+      <DependentUpon>201605262050589_Mig_BodyHeadlineMessage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
