--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -324,6 +324,8 @@
     <Content Include="Areas\TD\Views\Shared\_TDKendoFuncs.cshtml">
       <SubType>Code</SubType>
     </Content>
+    <Content Include="Content\AdRoll\dashboard_da.css" />
+    <Content Include="Content\AdRoll\multi_product_da.css" />
     <Content Include="Content\blackbird.css" />
     <Content Include="Content\blackbird_icons.png" />
     <Content Include="Content\blackbird_panel.png" />
