AdRoll FB Previews: Done, ready for QA.  EF Migration published to biz.DirectAgentsTest.

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -272,6 +272,10 @@
     <Compile Include="MigrationsTD\201606022031596_Mig_CreativeURLFormat.Designer.cs">
       <DependentUpon>201606022031596_Mig_CreativeURLFormat.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201606072304421_Mig_AdDestinationUrl.cs" />
+    <Compile Include="MigrationsTD\201606072304421_Mig_AdDestinationUrl.Designer.cs">
+      <DependentUpon>201606072304421_Mig_AdDestinationUrl.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -453,6 +457,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201606022031596_Mig_CreativeURLFormat.resx">
       <DependentUpon>201606022031596_Mig_CreativeURLFormat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201606072304421_Mig_AdDestinationUrl.resx">
+      <DependentUpon>201606072304421_Mig_AdDestinationUrl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
