--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -33,6 +33,8 @@
     <add key="SSRS_ReportServerUrl" value="http://173.204.123.91/ReportServer_SQL3" />
     <add key="SSRS_ReportServerUsername" value="reportviewertest" />
     <add key="SSRS_ReportServerPassword" value="sp0ngbOb" />
+
+    <add key="ProgDemoAdvs" value="sees,seph,sony,winv" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
