--- a/3/BingAds/BingAds.csproj
+++ b/3/BingAds/BingAds.csproj
@@ -35,8 +35,9 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.BingAds">
-      <HintPath>..\ClientPortal.Web\packages\Microsoft.BingAds.SDK.9.3.6\lib\net45\Microsoft.BingAds.dll</HintPath>
+    <Reference Include="Microsoft.BingAds, Version=10.4.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\DirectAgents.Web\packages\Microsoft.BingAds.SDK.10.4.6\lib\net45\Microsoft.BingAds.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.mshtml, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>True</EmbedInteropTypes>
