--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -3022,6 +3022,7 @@
     <Content Include="Scripts\kendo\2015.1.408\kendo.virtuallist.min.js.map" />
     <Content Include="Scripts\kendo\2015.1.408\kendo.web.min.js.map" />
     <Content Include="Scripts\kendo\2015.1.408\kendo.window.min.js.map" />
+    <Content Include="Views\Shared\_Portal2016.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
