--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -156,7 +156,10 @@
       You can refer to
       https://github.com/googleads/googleads-dotnet-lib/wiki/Understanding-App.config
       for detailed explanation of each configuration key.
-    --><!-- Settings related to SOAP logging. --><!-- Proxy settings for library. --><!-- Settings specific to AdWords API.--><!-- If your application is a simple script that makes calls to only a
+    --><!-- Settings related to SOAP logging. --><!-- Proxy settings for library. --><!-- Settings specific to AdWords API.--><!-- The name to uniquely identify your application. The client library will
+         include this text in the user agent when sending requests to the
+         server. This name may be used to uniquely identify your application's
+         API requests from the server logs.--><!-- If your application is a simple script that makes calls to only a
          single Adwords account, then you can set your customer ID here. If you
          have multiple customer IDs to deal with in your account, then you can
          comment out this key and set the value at runtime by setting
@@ -165,6 +168,8 @@
          when downloading a report in CSV, TSV or their gzipped formats. --><!-- The following OAuth2 settings are optional. --><!-- Provide a different OAuth2 scope if required. Multiple scopes should be
          separated by spaces. --><!-- <add key="OAuth2Scope" value="INSERT_OAUTH2_SCOPE_HERE" /> --><!-- Use the following keys if you want to use Web / Installed application
          OAuth flow.--><add key="UserAgent" value="direct-agents-client-portal" />
+    <!-- See https://developers.google.com/adwords/api/docs/signingup for
+         instructions on signing up for a developer token.-->
     <add key="DeveloperToken" value="kEw3EPUPKDwKFpjRRIpm5Q" />
     <!--<add key="ClientCustomerId" value="707-036-4439"/>-->
     
@@ -173,8 +178,12 @@
          downloading a report. If this setting is commented out, then the server
          behaves as explained in
          https://developers.google.com/adwords/api/docs/guides/zero-impression-reports#default_behavior.
-    --><!-- <add key="IncludeZeroImpressions" value="true"/> -->
-    <!-- Settings specific to use OAuth2 as authentication mechanism. You could
+    --><add key="IncludeZeroImpressions" value="false" />
+    <!-- Use the following setting to return enum values as actual enum values
+         instead of display values when downloading a report. If this setting
+         is commented out, then the server behaves as explained in
+         https://developers.google.com/adwords/api/docs/guides/reporting#request-headers.
+    --><!-- <add key="UseRawEnumValues" value="true" /> --><!-- Settings specific to use OAuth2 as authentication mechanism. You could
          run Common\Util\OAuth2TokenGenerator.cs to generate this section of the
          config file.
     --><!-- Provide the OAuth2 client ID and secret. You can create one from
@@ -184,13 +193,13 @@
     --><add key="OAuth2ClientId" value="596863405612.apps.googleusercontent.com" />
     <add key="OAuth2ClientSecret" value="8qonZCA_oSenYehXTQ9Hcgxk" />
     
-    <!-- If you are using a single MCC account's credentials to make calls to
-         all your accounts, then you can run OAuth2TokenGenerator.cs to generate
-         a RefreshToken for that account and set this key in your application's
-         App.config / Web.config. If you are making calls to multiple unrelated
-         accounts, then you need to implement OAuth2 flow in your account and
-         set this key at runtime. See OAuth folder under Examples folder for a
-         web and a console application example.
+    <!-- If you are using a single AdWords manager account's credentials to make
+         calls to all your accounts, then you can run OAuth2TokenGenerator.cs to
+         generate a RefreshToken for that account and set this key in your
+         application's App.config / Web.config. If you are making calls to
+         multiple unrelated accounts, then you need to implement OAuth2 flow in
+         your account and set this key at runtime. See OAuth folder under
+         Examples folder for a web and a console application example.
     --><add key="OAuth2RefreshToken" value="1/Frp86av8j0EBR276x606m0EitEeEwFzob377Whl0K0E" />
     <!--
     <add key="AuthorizationMethod" value="ClientLogin" />   
@@ -221,7 +230,8 @@
     
     
   <!-- Settings related to general library behaviour. --><!-- Use this key to automatically retry a call that failed due to a
-         recoverable error like expired credentials. --><!-- <add key="RetryCount" value="1"/> --><!-- Set the service timeout in milliseconds. --><!-- <add key="Timeout" value="100000"/> --><!-- Use this key to enable or disable gzip compression in SOAP requests.--><add key="MaskCredentials" value="true" /><add key="EnableGzipCompression" value="true" /><add key="ProxyServer" value="" /><add key="ProxyUser" value="" /><add key="ProxyPassword" value="" /><add key="ProxyDomain" value="" /><add key="UserAgent" value="INSERT_YOUR_COMPANY_OR_APPLICATION_NAME_HERE" /><add key="DeveloperToken" value="INSERT_YOUR_DEVELOPER_TOKEN_HERE" /><add key="ClientCustomerId" value="INSERT_YOUR_CLIENT_CUSTOMER_ID_HERE" /><add key="SkipReportHeader" value="false" /><add key="SkipReportSummary" value="false" /><add key="SkipColumnHeader" value="false" /><add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE" /><add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE" /><add key="OAuth2Mode" value="APPLICATION" /><add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE" /><!-- Optional: Specify an OAuth2 redirect url if you are building a
+         recoverable error like expired credentials. --><!-- <add key="RetryCount" value="1" /> --><!-- Set the service timeout in milliseconds. --><!-- <add key="Timeout" value="100000" /> --><!-- Use this key to enable or disable gzip compression in SOAP requests.--><!-- Set this flag to true to include the list of client library utilities
+         that your code uses in the user agent string.--><add key="MaskCredentials" value="true" /><add key="EnableSoapExtension" value="true" /><add key="EnableGzipCompression" value="true" /><add key="IncludeUtilitiesInUserAgent" value="true" /><add key="ProxyServer" value="" /><add key="ProxyUser" value="" /><add key="ProxyPassword" value="" /><add key="ProxyDomain" value="" /><add key="UserAgent" value="INSERT_YOUR_COMPANY_OR_APPLICATION_NAME_HERE" /><add key="DeveloperToken" value="INSERT_YOUR_DEVELOPER_TOKEN_HERE" /><add key="ClientCustomerId" value="INSERT_YOUR_CLIENT_CUSTOMER_ID_HERE" /><add key="SkipReportHeader" value="false" /><add key="SkipReportSummary" value="false" /><add key="SkipColumnHeader" value="false" /><add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE" /><add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE" /><add key="OAuth2Mode" value="APPLICATION" /><add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE" /><!-- Optional: Specify an OAuth2 redirect url if you are building a
          web application and implementing OAuth2 web flow in your application.
     --><!-- <add key="OAuth2RedirectUri" value="" /> --><!-- Use the following keys if you want to use OAuth2 service account flow.
          You should comment out all the keys for Web / Installed application
@@ -231,9 +241,11 @@
          for more details.
     --><!--
     <add key="OAuth2Mode" value="SERVICE_ACCOUNT" />
+    <add key="OAuth2PrnEmail" value="INSERT_OAUTH2_USER_EMAIL_HERE" />
+    <add key="OAuth2SecretsJsonPath" value="INSERT_OAUTH2_SECRETS_JSON_FILE_PATH_HERE" />
+    --><!-- The following keys are deprecated, use OAuth2SecretsJsonPath instead.--><!--
     <add key="OAuth2ServiceAccountEmail"
         value="INSERT_OAUTH2_SERVICE_ACCOUNT_EMAIL_HERE" />
-    <add key="OAuth2PrnEmail" value="INSERT_OAUTH2_USER_EMAIL_HERE" />
     <add key="OAuth2JwtCertificatePath"
         value="INSERT_OAUTH2_JWT_CERTIFICATE_PATH_HERE" />
     <add key="OAuth2JwtCertificatePassword"
