--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -68,6 +68,10 @@
     <Reference Include="AutoMapper.Net4">
       <HintPath>..\..\ClientPortal.Web\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.Net4.dll</HintPath>
     </Reference>
+    <Reference Include="BouncyCastle.Crypto, Version=1.7.4137.9688, Culture=neutral, PublicKeyToken=a4292a325f69b123, processorArchitecture=MSIL">
+      <HintPath>..\..\ClientPortal.Web\packages\BouncyCastle.1.7.0\lib\Net40-Client\BouncyCastle.Crypto.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Common.Logging">
       <HintPath>..\..\ClientPortal.Web\packages\Common.Logging.2.1.2\lib\net40\Common.Logging.dll</HintPath>
     </Reference>
@@ -90,12 +94,12 @@
       <HintPath>..\..\ClientPortal.Web\packages\EPPlus.4.0.4\lib\net20\EPPlus.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Google.Ads.Common, Version=3.10.0.0, Culture=neutral, PublicKeyToken=52807268f2b614dc, processorArchitecture=MSIL">
-      <HintPath>..\..\ClientPortal.Web\packages\Google.Ads.Common.3.10.0\lib\net40\Google.Ads.Common.dll</HintPath>
+    <Reference Include="Google.Ads.Common, Version=3.15.1.0, Culture=neutral, PublicKeyToken=52807268f2b614dc, processorArchitecture=MSIL">
+      <HintPath>..\..\ClientPortal.Web\packages\Google.Ads.Common.3.15.1\lib\net40\Google.Ads.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Google.AdWords, Version=18.19.0.0, Culture=neutral, PublicKeyToken=52807268f2b614dc, processorArchitecture=MSIL">
-      <HintPath>..\..\ClientPortal.Web\packages\Google.AdWords.18.19.0\lib\net40\Google.AdWords.dll</HintPath>
+    <Reference Include="Google.AdWords, Version=18.28.0.0, Culture=neutral, PublicKeyToken=52807268f2b614dc, processorArchitecture=MSIL">
+      <HintPath>..\..\ClientPortal.Web\packages\Google.AdWords.18.28.0\lib\net40\Google.AdWords.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Google.Apis, Version=1.8.2.23762, Culture=neutral, processorArchitecture=MSIL">
