--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
+  <package id="BouncyCastle" version="1.7.0" targetFramework="net45" />
   <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
   <package id="CsvHelper" version="2.13.0.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
@@ -8,8 +9,8 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.Extended" version="6.1.0.133" targetFramework="net45" />
   <package id="EPPlus" version="4.0.4" targetFramework="net45" />
-  <package id="Google.Ads.Common" version="3.10.0" targetFramework="net45" />
-  <package id="Google.AdWords" version="18.19.0" targetFramework="net45" />
+  <package id="Google.Ads.Common" version="3.15.1" targetFramework="net45" />
+  <package id="Google.AdWords" version="18.28.0" targetFramework="net45" />
   <package id="Google.Apis" version="1.8.2" targetFramework="net45" />
   <package id="Google.Apis.Analytics.v3" version="1.8.1.990" targetFramework="net45" />
   <package id="Google.Apis.Auth" version="1.8.2" targetFramework="net45" />
