--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -180,6 +180,10 @@
         <assemblyIdentity name="System.Linq.Dynamic" publicKeyToken="b72be0322d1b32a8" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.1.14.15853" newVersion="1.1.14.15853" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Services" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
