--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -1204,6 +1204,8 @@
     <Content Include="Areas\Prog\Views\Home\Site.cshtml" />
     <Content Include="Areas\Prog\Views\Home\Lead.cshtml" />
     <Content Include="Areas\Admin\Views\ClientInfo\EditLogo.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\Setup.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\AssignClientInfo.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
