--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -1160,7 +1160,7 @@
     <Content Include="App_Readme\Foundation_readme.md" />
     <Content Include="Areas\Admin\Views\SimpleReports\Index.cshtml" />
     <Content Include="Areas\Admin\Views\SimpleReports\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\SearchAdmin\TestReports.cshtml" />
+    <Content Include="Areas\Admin\Views\SearchAdmin\GenerateSpreadsheet.cshtml" />
     <Content Include="Areas\Admin\Views\SearchAdmin\CreateSearchProfile.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\EditorTemplates\DayOfWeek.cshtml" />
     <Content Include="Areas\TD\Views\Reports\Monthly.cshtml" />
