--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -275,6 +275,7 @@
     <Compile Include="Areas\TD\TDAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
+    <Compile Include="Controllers\CombinedController.cs" />
     <Compile Include="Controllers\CPController.cs" />
     <Compile Include="Controllers\ExportController.cs" />
     <Compile Include="Controllers\FilesController.cs" />
@@ -295,6 +296,7 @@
     <Compile Include="Models\CakeModels.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Models\CombinedVM.cs" />
     <Compile Include="Models\DashboardModel.cs" />
     <Compile Include="Models\ExportModels.cs" />
     <Compile Include="Models\FileUploadInfo.cs" />
@@ -3048,6 +3050,8 @@
     <Content Include="Views\Search\CampaignWeekly.cshtml" />
     <Content Include="Views\Search\Contact.cshtml" />
     <Content Include="Views\Account\ManageNew.cshtml" />
+    <Content Include="Views\Combined\Index.cshtml" />
+    <Content Include="Views\Combined\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
