SearchConvSummary / SearchConvType entities

--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -234,6 +234,12 @@
     <Compile Include="Contexts\SearchChannel.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
+    <Compile Include="Contexts\SearchConvSummary.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Contexts\SearchConvType.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contexts\SearchDailySummary.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
