--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -205,6 +205,8 @@
     <Content Include="Areas\ProgAdmin\Views\Campaigns\Dashboard.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Reports\ReportViewer.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Stats\Conv.cshtml" />
+    <Compile Include="Areas\RevTrack\Controllers\ClientsController.cs" />
+    <Compile Include="Areas\RevTrack\RevTrackAreaRegistration.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Controllers\BudgetsController.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
@@ -830,6 +832,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Areas\RevTrack\Models\" />
+    <Folder Include="Areas\RevTrack\Views\Clients\" />
+    <Folder Include="Areas\RevTrack\Views\Shared\" />
     <Folder Include="Views\Test\" />
   </ItemGroup>
   <ItemGroup>
@@ -996,6 +1001,8 @@
     <Content Include="Areas\ProgAdmin\Views\Advertisers\EditLogo.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\TDads\Index.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\TDads\Edit.cshtml" />
+    <Content Include="Areas\RevTrack\Views\web.config" />
+    <Content Include="Areas\RevTrack\Views\_ViewStart.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
